# ficlip

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  ficlip_8h.html  ficlip_8h.js  ficlip_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  struct___f_i___m_e_t_a.html  struct___f_i___m_e_t_a.js  struct___f_i___p_a_t_h.html  struct___f_i___p_a_t_h.js  struct_f_i___p_a_t_h___s_e_c_t_i_o_n.html  struct_f_i___p_a_t_h___s_e_c_t_i_o_n.js  struct_f_i___p_o_i_n_t___d.html  struct_f_i___p_o_i_n_t___d.js
.github/workflows/: coverall.yml  doxygen.yml  ubuntu-x86_64.yml
docs/: Doxyfile.in
goodies/: format
inc/: ficlip.h
misc/: format
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
src/: clip.c  ficlip-private.h  ficlip.c  path.c  utils.c
tests/: ficlip-test.c  valgrind_run.sh
